--- a/iiwa_control/package.xml
+++ b/iiwa_control/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
+<!-- <package> -->
   <name>iiwa_control</name>
   <version>1.4.0</version>
   <description>A package containing controllers used by MoveIt! and Gazebo</description>
@@ -11,5 +12,5 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>controller_manager</depend>
-
+  <!-- <run_depend>controller_manager</run_depend> -->
 </package>
