--- a/iiwa_hw/CMakeLists.txt
+++ b/iiwa_hw/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
+# cmake_minimum_required(VERSION 2.8.3)
 project(iiwa_hw)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 find_package(catkin REQUIRED COMPONENTS
   control_toolbox
@@ -11,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   hardware_interface
   realtime_tools
   joint_limits_interface
+# tf
   urdf
   cmake_modules
   iiwa_msgs
@@ -33,13 +36,44 @@ catkin_package(
 
 add_library(${PROJECT_NAME} src/iiwa_hw.cpp)
 add_executable(${PROJECT_NAME}-bin src/main.cpp)
+### Specify additional locations of header files
+# include_directories(include
+#  ${Boost_INCLUDE_DIR}
+#  ${catkin_INCLUDE_DIRS}
+#)
 
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_include_directories(${PROJECT_NAME}-bin PRIVATE include ${catkin_INCLUDE_DIRS})
+### Declare a cpp library
+# add_library(${PROJECT_NAME}
+#  include/iiwa_hw.h
+#  src/iiwa_hw.cpp
+#)
+
+# target_link_libraries(${PROJECT_NAME}
+#    ${catkin_LIBRARIES}
+#)
 
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME})
+### Declare a cpp executable
+# add_executable(${PROJECT_NAME}-bin
+#    src/main.cpp
+#)
+
+### Add dependence to the iiwa_msg module for the executable
+#add_dependencies(${PROJECT_NAME}-bin
+#				iiwa_msgs_generate_messages_cpp)
 
 add_dependencies(${PROJECT_NAME} iiwa_msgs_generate_messages_cpp)
 add_dependencies(${PROJECT_NAME}-bin iiwa_msgs_generate_messages_cpp)
 
+## Add dependence to the iiwa_msg module for the library
+# add_dependencies(${PROJECT_NAME}
+#				iiwa_msgs_generate_messages_cpp)
+
+### Specify libraries to link a library or executable target against
+#target_link_libraries(${PROJECT_NAME}-bin
+#    ${PROJECT_NAME}
+#    ${catkin_LIBRARIES}
+#)
