--- a/iiwa_msgs/package.xml
+++ b/iiwa_msgs/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
+<!-- <package> -->
 <name>iiwa_msgs</name>
   <version>2.3.1</version>
   <description>ROS Messages to communicate with a KUKA LBR IIWA Robot</description>
@@ -9,6 +10,12 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <!-- <build_depend>message_generation</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend> -->
 
   <depend>actionlib_msgs</depend>
   <depend>message_generation</depend>
